<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>

    <string name="app_name">QuizUp</string>
    <string name="app_desc">QuizUp Application</string>
    <string name="app_author">By Rom Nitzan</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>
    <string name="title_activity_opponent_list">Choose Opponent</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_game_summary">Game Summary</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="copyright">&#174;2016 Rom Nitzan.</string>

    <!-- Settings -->
    <string name="settings_category_about_title">About</string>
    <string name="settings_switchaccount_title">Switch accounts</string>
    <string name="settings_join_google_plus">Enable Google+</string>

    <!-- Registration -->
    <string name="failedToRegister">We were unable to register the user. Please try again.</string>

    <!-- GCM Message (FOR DEVELOPMENT) -->
    <string name="gcmError">*NOTE TO DEVELOPER*\nEnsure that Google Cloud Messaging for Android has been turned on through the API Console\'s Services section.\n\nGCM Returned the following error : %s</string>

    <!-- Google Plus Messages -->
    <string name="googlePlusProfileNotAvailable">*NOTE TO DEVELOPER*\nEnsure that Google+ API has been turned on through the API Console\'s Services section.\n\nThis accounts doesn\'t seem to have a public Google+ profile available. If you want to access your circles please go to settings and switch to a different account.</string>

    <!-- MainActivity -->
    <string name="userStatsText" formatted="false">You\'ve won %d of %d games</string>
    <string name="userNameText">Lauren Ipsum</string>
    <string name="challengeOpponentButton">CHALLENGE OPPONENT</string>
    <string name="singlePlayerButton">SINGLE PLAYER</string>
    <string name="user_image_desc">user image</string>
    <string name="noGamesPlayedMessage">Race against the clock to solve riddles!</string>
    <string name="aboutMeButton">About</string>

    <!-- GameSummaryActivity -->
    <string name="playAgain">Play again</string>
    <string name="homeButton">Home</string>
    <string name="mainMenu">MAIN MENU</string>
    <string name="summary_times_up">Time\'s up!</string>
    <string name="summary_perfect">Perfect!</string>
    <string name="summary_header_you">You</string>
    <string name="summary_finished_before_you" formatted="false">%s finished before you.</string>
    <string name="summary_you_finished_before" formatted="false">You finished before %s.</string>
    <string name="num_questions_correct" formatted="false">You got %s out of %s questions.</string>
    <string name="someone_beat_someone" formatted="false">%s beat %s, %s to %s</string>
    <string name="you_won" formatted="false">You won!</string>
    <string name="you_lost" formatted="false">You lost!</string>
    <string name="rematach">Rematch</string>
    <string name="gameheader_pagination_text" formatted="false">%s of %s</string>
    <string name="results">Results</string>
    <string name="tie">It\'s a tie!</string>
    <string name="failedToSubmitAnswers">We\'re sorry but we encountered an error while submitting your answers.</string>

    <!-- OpponentListActivity -->
    <string name="chooseOpponentHeaderText">CHOOSE AN OPPONENT</string>
    <string name="yourCirclesText">YOUR CIRCLES</string>
    <string name="everyoneText">EVERYONE</string>
    <string name="opponents_no_opponents_found">No opponents found</string>

    <!-- SplashScreenActivity -->
    <string name="splashscreen_text">Loading!</string>

    <!-- WaitOverlayFragment -->
    <string name="loading">Loading&#8230;</string>
    <string name="waitingDialogText">Waiting for %s to \n accept challenge&#8230;</string>
    <string name="contentDescriptionLogo">app logo</string>
    <string name="waitingForOpponentToFinish">Waiting for opponent to finish&#8230;</string>
    <string name="submittingAnswers">Submitting Answers&#8230;</string>

    <!-- Countdown overlay -->
    <string name="countdownHeatingUp">Building game board&#8230;</string>
    <string name="countdownGetReadyToPlay">Get ready to play&#8230;</string>
    <string name="countdownGetReadyToPlayOpponent">Get ready to play</string>
    <string name="countdownOpponent">&#160;%s&#8230;</string>

    <!-- letter_view -->
    <string name="onepoint">1</string>
    <string name="letterplaceholder">L</string>
    <string name="placeholderText"></string>
    <string name="cancel">Cancel</string>
    <string name="pleaseWait">Please wait&#8230;</string>

    <!-- Invitation Notifiation -->
    <string name="acceptInvitation">Play</string>
    <string name="declineInvitation">Decline</string>

    <!-- Invitation dialogs -->
    <string name="sendingChallenge">Sending a challenge&#8230;</string>
    <string name="cancelChallenge">Cancel</string>
    <string name="challengeDeclined">Challenge declined.</string>
    <string name="opponentAcceptedCantCancel">Opponent has already accepted. Building game board&#8230;</string>
    <string name="challengerCancelledCantAccept">The challenger has cancelled.</string>
    <string name="unableToSendInvitation">Unable to send invitation.</string>
    <string name="unableToDeclineInvitation">Unable to decline the invitation.</string>
    <string name="invitationIntendedForAnotherUser">This invitation was intended for %s. Please use the settings menu and switch accounts.</string>
    <string name="attemptingToCancelinvitation">Currently canceling your last invitation. Please try again in a moment.</string>
    <string name="playerNotRegisteredInQuizUp">The selected player does not have QuizUp installed.</string>
    <string name="acceptingChallenge">Accepting challenge&#8230;</string>

    <!-- Standard Dialog -->
    <string name="dialogButtonOK">OK</string>
    <string name="dialogButtonCancel">Cancel</string>
    <string name="lobby_select_opponent">Select an opponent</string>
    <string name="buldingGameBoard">Building Game Board&#8230;\n</string>
    <string name="auth_dialog_retry">Retry</string>
    <string name="auth_dialog_exit">Exit</string>
    <string name="auth_dialog_title">Google account authentication</string>
    <string name="auth_dialog_message">The authentication process was cancelled, what do you want to do next?</string>

    <!-- GCM
    <string name="gcm_defaultSenderId">346405480808</string>
    -->

    <string name="server_client_id">154880045378-4ujpe1c7a8tujadrm9kctvs1qpd60dek.apps.googleusercontent.com</string>
    <string name="title_activity_sign_in">SignInActivity</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>


</resources>
