<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/lib/com.rom.quizup.client"
    android:id="@+id/mainActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.rom.quizup.client.ui.RoundImageView
            android:id="@+id/user_image"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_gravity="center"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/user_image_desc"
            android:src="@drawable/avatar_large"/>

        <TextView
            android:id="@+id/userNameText"
            style="@style/MainTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/placeholderText"
            android:textSize="@dimen/H2"/>

        <TextView
            android:id="@+id/userStatsText"
            style="@style/MainSubtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/placeholderText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="165dp"
        android:layout_gravity="bottom"
        android:background="@color/aqua"
        android:orientation="vertical">

        <com.rom.quizup.client.ui.IconButton
            android:id="@+id/singlePlayerButton"
            style="@style/QuizupButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="24dp"
            android:onClick="onSinglePlayerButtonClick"
            app:buttonText="@string/singlePlayerButton"

            android:background="@color/blue_grey_700"/>

        <com.rom.quizup.client.ui.IconButton
            android:id="@+id/challengeOpponentButton"
            style="@style/QuizupButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:onClick="onChallengeOpponentButtonClick"
            app:buttonText="@string/challengeOpponentButton"
            />

    </LinearLayout>
</FrameLayout>
