<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:background="@color/aqua"
            android:layout_marginLeft="-15dp"
            android:layout_marginRight="-15dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/gameOverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/summary_times_up"
                android:textColor="@color/navy"
                android:textSize="@dimen/H1"/>

            <TextView
                android:id="@+id/gameResultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/num_questions_correct"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/homeButton"
                style="@style/QuizupButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:height="40dp"
                android:text="@string/mainMenu"
                android:textColor="@drawable/button_text_state_selector"/>

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <RelativeLayout
            android:id="@+id/resultsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp" >

            <TextView
                android:id="@+id/resultsTextView1"
                style="@style/ListHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/results"/>

            <TextView
                android:id="@+id/resultsTextView2"
                style="@style/ListHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="7dp"
                android:textIsSelectable="false"/>

        </RelativeLayout>

        <View
            android:id="@+id/headerDivider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/navy"/>

    </LinearLayout>
</LinearLayout>
